app/styles/components/_map-tools.scss
.leaflet-container {

	a {
		color: $brand-primary;
	}

	.leaflet-control-attribution {
		background: rgba($white, .2);
	}

	.leaflet-control-map-expand {
		cursor: pointer;
	}

    div.cartodb-zoom,
    div.cartodb-tiles-loader {
        float: right;
        margin: 20px 20px 0 0;
    }

    div.cartodb-tiles-loader {
        // 20px spacing from bottom of fullscreen control
        margin-top: 53px;
    }
}

.map-container {

    div.cartodb-legend-stack {
        bottom: 20px;
        left: 20px;
        right: auto;
    }

    .vis-controls {
        position: absolute;
        bottom: 20px;
        right: 20px;
        z-index: 999;

        .vis-control {
            padding: 10px;
            margin-top: 10px;
            font-size: 13px;
            -webkit-box-shadow: rgba(0,0,0,.2) 0 0 4px 2px;
            -moz-box-shadow: rgba(0,0,0,.2) 0 0 4px 2px;
            box-shadow: rgba(0,0,0,.2) 0 0 4px 2px;
            background: #fff;
            -webkit-border-radius: 4px;
            -moz-border-radius: 4px;
            -ms-border-radius: 4px;
            -o-border-radius: 4px;
            border-radius: 4px;
            border: 1px solid #999;
            z-index: 1000;
            width: 41px;
            float: right;
            clear: both;

            ul {
                padding: 0;
                list-style: none;
            }

            &.visible {
                width: auto;

                .vis-control-button:after {
                    content: '✕';
                    position: absolute;
                    right: 5px;
                    font-weight: 900;
                    top: 2px;
                }
            }

            .vis-control-button {
                cursor: pointer;
                position: relative;

                & > span {
                    font-size: 16px;
                    margin-left: 5px;
                }
            }

            .vis-control-body {
                margin: 10px 10px 0 10px;
            }
        }
    }

    #vis-popover {
        display: none;
        position: absolute;
        background: $base-dark;
        color: #fff;
        z-index: 1000;
        border-radius: 10px;

        &.visible {
            display: block;
        }
    }

    .org-name {
        margin: 0;
        padding: 5px 1rem;
        font-weight: 600;
    }

    .additional-orgs {
        margin: 0;
        padding: 5px 10px;
        font-size: 13px;
        font-style: italic;
        border-top: 1px solid black;
    }
}

.leaflet-bar {
	box-shadow: 0 0 4px rgba($base-dark, .5);

    a {
        width: 28px;
        height: 28px;
        line-height: 28px;
        border-bottom: none;

        &:hover {
            width: 28px;
            height: 28px;
            line-height: 28px;
        }
    }
}

.cartodb-fullscreen {
    position: absolute;
    display: block;
    // 20px below zoom control
    top: 86px;
    right: 20px;

    a {
        // override default transition for a tags set in _base.scss
        transition: unset;
    }
}

.leaflet-container a.leaflet-popup-close-button {
    top: -11px;
    right: -10px;
    background: white;
    opacity: 1;
    color: $base-darker;
    border-radius: 100%;
    height: 22px;
    width: 22px;
    padding: 0;
    line-height: 19px;
    box-shadow: 0 0 0 2px $base-darker;

    &:hover {
        color: white;
        background: #3a3b3b;
    }
}

.leaflet-popup-content-wrapper,
.leaflet-popup-tip {
    background: #fff;
}

.leaflet-popup-content {
    margin: 0;
    padding: 0;
}

.popup-header {
    padding: 1rem 2rem;
    border-bottom: 1px solid $base-darker;
    background: $base-dark;
    color: #fff;
    border-radius: 12px 12px 0 0;
    p {
        @extend h4;
        margin: 0;
    }
}

.popup-content {
    padding: 1rem 2rem;
    max-height: 250px;
    overflow-y: auto;
}

.popup-content-row {
    display: flex;
    flex-direction: column;
    padding: 1rem 0;

    &:not(:last-child) {
        border-bottom: 1px solid $base-light;
    }

    .popup-content-row-line {
        display: flex;
        align-items: center;

        .details {
            margin-left: auto;
        }

        .org-type {
            width: 1rem;
            height: 1rem;
            border-radius: 10px;
            margin-right: 10px;
            flex: none;
        }
    }
}

// CartoDB Map
.cartodb-map-wrapper {

    .cartodb-legend.category {

        li {
            text-transform: none;
        }

        .bullet {
            float: none;
            display: inline-block;
            vertical-align: middle;
            width: 11px;
            height: 11px;
            border: none;
            opacity: .8;
        }
    }

    .cartodb-tooltip {
        z-index: 1000;
        border: 1px solid $base-dark;
    }

    //hover tooltip
    .cartodb-tooltip-content-wrapper {
        background: $base-dark;

        p {
            color: $white;
        }
    }

    //click popup
    .cartodb-popup.v2 {
        background: $base-dark;

        h2 {
            @include font-size(14);
            color: $white;
            padding-bottom: 10px;
            margin-bottom: 10px;
            border-bottom: 1px solid $base;
        }

        p {
            color: $base-light;
        }

        .cartodb-popup-content a {
            display: block;
            text-align: center;
            padding: 10px;
            border-radius: 100px;
            background: $brand-primary;
            color: $white;
            max-width: 90%;

            &:hover {
                text-decoration: none;
                background: $brand-primary-light;
            }
        }

        a.close {
            background: $base;
            color: $white;

            &:before, &:after {
                background: $white;
            }
        }

        &:before {
            border-top-color: $base-dark;
        }
    }
}

.cartodb-tooltip {
    background: white;
    border-radius: 10px;
    margin-left: -190px;
    margin-top: -5px;
    width: 180px;
    padding: 5px 1rem;
    line-height: 1.3;
    opacity: .8;

    .CDB-Tooltip-list {
        padding: 0;
        list-style: none;
        margin: 0;
    }

    h3, h4 {
        @extend p;
        text-transform: uppercase;
        font-weight: 600;
        margin: 0;
        letter-spacing: 0;
        line-height: 1.3;
        color: $brand-primary;
        display: inline;
    }
}

/* Fix for leaflet draw pink svg */
.leaflet-draw-guide-dash {
    background-color: darken($brand-primary, 5%) !important;
}

path.leaflet-clickable {
    fill: rgba(black, .1) !important;
    stroke: darken($brand-primary, 5%) !important;
}

